--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "transposer1000",
   "version": "0.0.1",
-  "description": "Slice, randomly turn slices upside down.",
+  "description": "Slice the image, turn some of the slices upside down.",
   "main": "index.html",
   "dependencies": {},
   "devDependencies": {
